--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </a>
           <ul class="nav-list">
             <li>
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link studio-link" href="./index.html">Studio</a>
             </li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
@@ -59,28 +59,48 @@
         <div class="benefits-container container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
-            <li class="benefis-items">
+            <li class="benefits-items">
+              <div class="conteiner-benefits-icons">
+                <svg class="benefits-icons" width="64" height="64">
+                  <use href="./images/icons.svg#id=icon-strategy"></use>
+                </svg>
+              </div>
               <h3 class="benefits-heading heading">Strategy</h3>
               <p class="benefits-text text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="benefis-items">
+            <li class="benefits-items">
+              <div class="conteiner-benefits-icons">
+                <svg class="benefits-icons" width="64" height="64">
+                  <use href="./images/icons.svg#id=icon-punctuality"></use>
+                </svg>
+              </div>
               <h3 class="benefits-heading heading">Punctuality</h3>
               <p class="benefits-text text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="benefis-items">
+            <li class="benefits-items">
+              <div class="conteiner-benefits-icons">
+                <svg class="benefits-icons" width="64" height="64">
+                  <use href="./images/icons.svg#id=icon-diligence"></use>
+                </svg>
+              </div>
               <h3 class="benefits-heading heading">Diligence</h3>
               <p class="benefits-text text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="benefis-items">
+            <li class="benefits-items">
+              <div class="conteiner-benefits-icons">
+                <svg class="benefits-icons" width="64" height="64">
+                  <use href="./images/icons.svg#id=icon-technologies"></use>
+                </svg>
+              </div>
               <h3 class="benefits-heading heading">Technologies</h3>
               <p class="benefits-text text">
                 Design practice focused on digital experiences. We bring forth a
@@ -107,6 +127,30 @@
               <div class="card-container">
                 <h3 class="team-heading heading">Mark Guerrero</h3>
                 <p class="team-text text">Product Designer</p>
+                <div class="team-container-icons">
+                  <ul class="team-list-icons">
+                    <li class="team-items-icons">
+                      <svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#id=icon-instagram"></use>
+                      </svg>
+                    </li>
+                    <li class="team-items-icons">
+                      <svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#id=icon-twitter"></use>
+                      </svg>
+                    </li>
+                    <li class="team-items-icons">
+                      <svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#id=icon-facebook"></use>
+                      </svg>
+                    </li>
+                    <li class="team-items-icons">
+                      <svg class="team-icons" width="16" height="16">
+                        <use href="./images/icons.svg#id=icon-linkedin"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-items">
