--- a/index.html
+++ b/index.html
@@ -123,31 +123,40 @@
                 width="264"
                 height="260"
               />
-
               <div class="card-container">
                 <h3 class="team-heading heading">Mark Guerrero</h3>
                 <p class="team-text text">Product Designer</p>
                 <div class="team-container-icons">
                   <ul class="team-list-icons">
                     <li class="team-items-icons">
-                      <svg class="team-icons" width="16" height="16">
-                        <use href="./images/icons.svg#id=icon-instagram"></use>
-                      </svg>
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#id=icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="team-items-icons">
-                      <svg class="team-icons" width="16" height="16">
-                        <use href="./images/icons.svg#id=icon-twitter"></use>
-                      </svg>
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="team-items-icons">
-                      <svg class="team-icons" width="16" height="16">
-                        <use href="./images/icons.svg#id=icon-facebook"></use>
-                      </svg>
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="team-items-icons">
-                      <svg class="team-icons" width="16" height="16">
-                        <use href="./images/icons.svg#id=icon-linkedin"></use>
-                      </svg>
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -165,6 +174,40 @@
               <div class="card-container">
                 <h3 class="team-heading heading">Tom Ford</h3>
                 <p class="team-text text">Frontend Developer</p>
+                <div class="team-container-icons">
+                  <ul class="team-list-icons">
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#id=icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-items">
@@ -179,6 +222,40 @@
               <div class="card-container">
                 <h3 class="team-heading heading">Camila Garcia</h3>
                 <p class="team-text text">Marketing</p>
+                <div class="team-container-icons">
+                  <ul class="team-list-icons">
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#id=icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-items">
@@ -192,6 +269,40 @@
               <div class="card-container">
                 <h3 class="team-heading heading">Daniel Wilson</h3>
                 <p class="team-text text">UI Designer</p>
+                <div class="team-container-icons">
+                  <ul class="team-list-icons">
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#id=icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-items-icons">
+                      <a href="" class="link-icon">
+                        <svg class="team-icons" width="16" height="16">
+                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
