--- a/index.html
+++ b/index.html
@@ -397,13 +397,48 @@
     </main>
     <footer class="main-footer">
       <div class="footer-container container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div clas logo-text-container>
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+          <p class="footer-text text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div media-container>
+          <p class="media-text text">Social media</p>
+          <ul class="footer-media-list">
+            <li class="footer-media-items">
+              <a href="" class="footer-media-link">
+                <svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#id=icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-items">
+              <a href="" class="footer-media-link">
+                <svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#id=icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-items">
+              <a href="" class="footer-media-link">
+                <svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#id=icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-items">
+              <a href="" class="footer-media-link">
+                <svg class="footer-icons" width="24" height="24">
+                  <use href="./images/icons.svg#id=icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
