--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     </main>
     <footer class="main-footer">
       <div class="footer-container container">
-        <div clas logo-text-container>
+        <div class="logo-text-container">
           <a class="logo footer-logo" href="./index.html"
             >Web<span class="footer-logo-part">Studio</span></a
           >
@@ -406,7 +406,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div media-container>
+        <div class="media-conteiner">
           <p class="media-text text">Social media</p>
           <ul class="footer-media-list">
             <li class="footer-media-items">
