--- a/index.html
+++ b/index.html
@@ -314,78 +314,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-items">
-              <img
-                class="portfolio-pic"
-                src="./images/img-s4-1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="image-container">
+                <img
+                  class="portfolio-pic"
+                  src="./images/img-s4-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-heading heading">Banking App</h3>
                 <p class="portfolio-text text">App</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-pic"
-                src="./images/img-s4-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="image-container">
+                <img
+                  class="portfolio-pic"
+                  src="./images/img-s4-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-heading heading">Cashless Payment</h3>
                 <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-pic"
-                src="./images/img-s4-3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="image-container">
+                <img
+                  class="portfolio-pic"
+                  src="./images/img-s4-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-heading heading">Meditation App</h3>
                 <p class="portfolio-text text">App</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-pic"
-                src="./images/img-s4-4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="image-container">
+                <img
+                  class="portfolio-pic"
+                  src="./images/img-s4-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-heading heading">Taxi Service</h3>
                 <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-pic"
-                src="./images/img-s4-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="image-container">
+                <img
+                  class="portfolio-pic"
+                  src="./images/img-s4-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-heading heading">Screen Illustrations</h3>
                 <p class="portfolio-text text">Design</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-pic"
-                src="./images/img-s4-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="image-container">
+                <img
+                  class="portfolio-pic"
+                  src="./images/img-s4-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-heading heading">Online Courses</h3>
                 <p class="portfolio-text text">Marketing</p>
