--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
             >Web<span class="header-logo-part">Studio</span>
           </a>
           <ul class="nav-list">
-            <li>
+            <li class="nav-items">
               <a class="nav-link studio-link" href="./index.html">Studio</a>
             </li>
-            <li><a class="nav-link" href="">Portfolio</a></li>
-            <li><a class="nav-link" href="">Contacts</a></li>
+            <li class="nav-items"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-items"><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
           <ul class="contacts-list">
             <li class="contacts-items">
-              <a class="contacts-link email" href="mailto:info@devstudio.com"
+              <a class="contacts-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="contacts-items">
-              <a class="contacts-link tel" href="tel:+110001111111"
+              <a class="contacts-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
