--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li class="benefits-items">
               <div class="conteiner-benefits-icons">
                 <svg class="benefits-icons" width="64" height="64">
-                  <use href="./images/icons.svg#id=icon-strategy"></use>
+                  <use href="./images/icons.svg#icon-strategy"></use>
                 </svg>
               </div>
               <h3 class="benefits-heading heading">Strategy</h3>
@@ -74,7 +74,7 @@
             <li class="benefits-items">
               <div class="conteiner-benefits-icons">
                 <svg class="benefits-icons" width="64" height="64">
-                  <use href="./images/icons.svg#id=icon-punctuality"></use>
+                  <use href="./images/icons.svg#icon-punctuality"></use>
                 </svg>
               </div>
               <h3 class="benefits-heading heading">Punctuality</h3>
@@ -86,7 +86,7 @@
             <li class="benefits-items">
               <div class="conteiner-benefits-icons">
                 <svg class="benefits-icons" width="64" height="64">
-                  <use href="./images/icons.svg#id=icon-diligence"></use>
+                  <use href="./images/icons.svg#icon-diligence"></use>
                 </svg>
               </div>
               <h3 class="benefits-heading heading">Diligence</h3>
@@ -98,7 +98,7 @@
             <li class="benefits-items">
               <div class="conteiner-benefits-icons">
                 <svg class="benefits-icons" width="64" height="64">
-                  <use href="./images/icons.svg#id=icon-technologies"></use>
+                  <use href="./images/icons.svg#icon-technologies"></use>
                 </svg>
               </div>
               <h3 class="benefits-heading heading">Technologies</h3>
@@ -126,35 +126,32 @@
               <div class="card-container">
                 <h3 class="team-heading heading">Mark Guerrero</h3>
                 <p class="team-text text">Product Designer</p>
-                <div class="team-container-icons">
                   <ul class="team-list-icons">
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#id=icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -170,39 +167,35 @@
                 width="264"
                 height="260"
               />
-
               <div class="card-container">
                 <h3 class="team-heading heading">Tom Ford</h3>
                 <p class="team-text text">Frontend Developer</p>
-                <div class="team-container-icons">
                   <ul class="team-list-icons">
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#id=icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -218,39 +211,35 @@
                 width="264"
                 height="260"
               />
-
               <div class="card-container">
                 <h3 class="team-heading heading">Camila Garcia</h3>
                 <p class="team-text text">Marketing</p>
-                <div class="team-container-icons">
                   <ul class="team-list-icons">
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#id=icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -269,35 +258,32 @@
               <div class="card-container">
                 <h3 class="team-heading heading">Daniel Wilson</h3>
                 <p class="team-text text">UI Designer</p>
-                <div class="team-container-icons">
                   <ul class="team-list-icons">
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use
-                            href="./images/icons.svg#id=icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-items-icons">
                       <a href="" class="link-icon">
                         <svg class="team-icons" width="16" height="16">
-                          <use href="./images/icons.svg#id=icon-linkedin"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -454,28 +440,28 @@
             <li class="footer-media-items">
               <a href="" class="footer-media-link">
                 <svg class="footer-icons" width="24" height="24">
-                  <use href="./images/icons.svg#id=icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-items">
               <a href="" class="footer-media-link">
                 <svg class="footer-icons" width="24" height="24">
-                  <use href="./images/icons.svg#id=icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-items">
               <a href="" class="footer-media-link">
                 <svg class="footer-icons" width="24" height="24">
-                  <use href="./images/icons.svg#id=icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-items">
               <a href="" class="footer-media-link">
                 <svg class="footer-icons" width="24" height="24">
-                  <use href="./images/icons.svg#id=icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
